# xprc-server-plugin-c

./: .dir-locals.el  .gitignore  .gitmodules  AI_USAGE_POLICY.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE.md  README.md  SECURITY.md  TC-generic_linux-linux-x86_64-clang.cmake  TC-ubuntu22.04-windows-x86_64-mingw.cmake  TC-windows_circleci-windows-x86_64-msvc_clang.cmake  TC-windows_github-windows-x86_64-msvc_clang.cmake  _build_target.sh  build-libs.sh  build.sh  deploy.sh  do_all.sh  export_symbols.map  fetch-libs.sh  sbom.xml  user.cfg.template
.circleci/: config.yml
.github/workflows/: build.yml
doxygen/: doxygen.conf
lib/: cimgui-01-user_config.patch  freeglut-01-include-build-target.patch  glew-01-clone-with-branch.patch  glew-02-clone-specific-refs.patch  glew-03-no-x11.patch  mesa-01-add_c11_only.patch  xsb_public_fork-01-remove-acfutils.patch  xsb_public_sk-01-remove-acfutils.patch
licenses/: MIT-materials.txt  README.md  xprc-binary-distribution.txt
licenses/spdx/: CDDL-1.0.txt  README.md  SGI-B-1.0.txt
server/native-c/: .dir-locals.el  CMakeLists.txt  _build_target.sh  build.sh  deploy.sh  do_all.sh  fetch-libs.sh  user.cfg.template
server/native-c/src/: arrays.c  arrays.h  channels.c  channels.h  command_drls_specific.c  command_drls_specific.h  command_drls_unspecific.h  command_drls_unspecific_impl.h  command_drqv.c  command_drqv.h  commands.c  commands.h  errors.h  hashmap.h  lists.c  lists.h  manualtest-network.c  manualtest-parser.c  network.h  network_linux.c  plugin.c  protocol.c  protocol.h  requests.c  requests.h  server.c  server.h  session.c  session.h  task.h  task_schedule.c  task_schedule.h  test-hashmap.c  utils.c  utils.h
server/python3/: PI_xprc.py
server/python3/xprc/: ClientSession.py  CommandCallback.py  CommandController.py  CommandDataRefQueryType.py  CommandDataRefQueryValues.py  Server.py  SharedResources.py
src/: arrays.c  arrays.h  channels.c  channels.h  command.c  command.h  command_cmhd.c  command_cmhd.h  command_cmrg.c  command_cmrg.h  command_cmtr.c  command_cmtr.h  command_drci.c  command_drci.h  command_drls.c  command_drls.h  command_drls_unspecific.c  command_drls_unspecific_dummy.c  command_drls_unspecific_dummy.h  command_drls_unspecific_impl.c  command_drmu.c  command_drmu.h  command_drqv.c  command_srfs.c  command_srfs.h  command_srid.c  command_srid.h  command_srlc.c  command_srlc.h  commands.c  commands.h  dataproxy.c  dataproxy.h  dependencies.c  dependencies.h  errors.h  fileio.c  fileio.h  fileio_internal.h  fileio_linux.c  (+73 more)
src/gui/: about_window.c  about_window.h  clipboard.c  clipboard.h  clipboard_windows.c  gui.c  gui.h  gui_utils.c  gui_utils.h  img_window.cpp  img_window.h  license_window.c  license_window.h  settings_window.c  settings_window.h
tools/license-writer/: main.py
