CMAKE_MINIMUM_REQUIRED(VERSION 3.22.1)
PROJECT(xprc)

INCLUDE(CheckIncludeFile)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
#SET(CMAKE_FIND_DEBUG_MODE TRUE)
#SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(BUILD_TESTS TRUE)

ADD_DEFINITIONS(-DRCLOG_COMPILED_MIN_LOG_LEVEL=RCLOG_LEVEL_TRACE)

#FIND_PACKAGE(OpenGL REQUIRED)

SET(COMMON_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/settings.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/requests.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/channels.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/network.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/fileio.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/arrays.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/hashmap.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lists.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/logger.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/password.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/random.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/utils.c
)

SET(XPRC_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_cmhd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_cmrg.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_cmtr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_drci.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_drls.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_drls_specific.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_drls_unspecific.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_drqv.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_drmu.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/plugin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/protocol.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/server.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/server_manager.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/dataproxy.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/xpcommands.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/xpqueue.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/session.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/task_schedule.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui/gui.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui/gui_utils.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui/img_window.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui/settings_window.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/settings_manager.c
    ${COMMON_SOURCES}
)

SET(LIB_BUILD "${CMAKE_CURRENT_SOURCE_DIR}/lib/_build")

# check if C11 compatibility wrappers are needed for threads.h and subsequently time.h
CHECK_INCLUDE_FILE(threads.h HAVE_C11_THREADS)
IF(NOT HAVE_C11_THREADS)
    ADD_DEFINITIONS(-DNEED_C11_THREADS_WRAPPER)
    SET(LINK_C11_COMPAT_STATIC "${LIB_BUILD}/libmesa_c11.a")
ENDIF()

SET(CIMGUI_LIB
    "${LIB_BUILD}/cimgui.a"
)

SET(IMGWINDOW_LIB
    "${LIB_BUILD}/ImgWindow.o"
    "${LIB_BUILD}/ImgFontAtlas.o"
)

SET(OPENGL_LIBRARIES "")
IF(UNIX)
    SET(OPENGL_LIBRARIES GL)
    SET(OPENGL_STATIC_LIBRARIES
        "${LIB_BUILD}/libGLEW.a"
    )
ELSEIF(WIN32)
    # FreeGLUT may not actually be required?
    # no reference to GLEW?!
    #SET(OPENGL_STATIC_LIBRARIES
    #    #"${LIB_BUILD}/libfreeglut_static.a"
    #    "${LIB_BUILD}/libGLEW.a"
    #)
    
    # FreeGLUT also links dynamically against: winmm gdi32
    SET(OPENGL_LIBRARIES opengl32)
ENDIF()

SET(XPSDK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/lib/XPSDK")
SET(XPSDK_INCLUDE "${XPSDK_ROOT}/CHeaders" CACHE STRING PATH)

IF(UNIX)
    ADD_LIBRARY(xprc SHARED ${XPRC_SOURCES})
ELSEIF(WIN32)
    ADD_LIBRARY(xprc MODULE ${XPRC_SOURCES})
ENDIF()

IF(UNIX)
    #ADD_DEFINITIONS(-DTARGET_UNIX)
    ADD_DEFINITIONS(-DTARGET_LINUX)
    TARGET_COMPILE_DEFINITIONS(xprc PUBLIC -DAPL=0 -DIBM=0 -DLIN=1 -DBUILD_PLUGIN=1)
    
    ADD_LIBRARY(xplm INTERFACE)
    ADD_LIBRARY(xpwidgets INTERFACE)
    SET_PROPERTY(TARGET xprc APPEND_STRING PROPERTY LINK_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -rdynamic -nodefaultlibs -undefined_warning -fPIC -fvisibility=hidden")
ELSEIF(WIN32)
    ADD_DEFINITIONS(-DTARGET_WINDOWS)
    TARGET_COMPILE_DEFINITIONS(xprc PUBLIC -DAPL=0 -DIBM=1 -DLIN=0 -DBUILD_PLUGIN=1 -D_CRT_SECURE_NO_WARNINGS)
    
    SET(XPLANE_LIBRARY_PATH "${XPSDK_ROOT}/Libraries/Win/")
    
    SET(GENERIC_CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ${CMAKE_FIND_ROOT_PATH_MODE_LIBRARY})
    SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY BOTH)
    FIND_LIBRARY(XPLM_LIBRARY XPLM_64 HINTS "${XPLANE_LIBRARY_PATH}")
    FIND_LIBRARY(XPWIDGETS_LIBRARY XPWidgets_64 HINTS "${XPLANE_LIBRARY_PATH}")
    SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ${GENERIC_CMAKE_FIND_ROOT_PATH_MODE_LIBRARY})
    
    ADD_LIBRARY(xplm SHARED IMPORTED GLOBAL)
    ADD_LIBRARY(xpwidgets SHARED IMPORTED GLOBAL)
    SET_PROPERTY(TARGET xplm PROPERTY IMPORTED_IMPLIB "${XPLM_LIBRARY}")
    SET_PROPERTY(TARGET xpwidgets PROPERTY IMPORTED_IMPLIB "${XPWIDGETS_LIBRARY}")
ENDIF()

SET_PROPERTY(TARGET xplm APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${XPSDK_INCLUDE}/XPLM" "${XPSDK_INCLUDE}/Wrappers")
SET_PROPERTY(TARGET xpwidgets APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${XPSDK_INCLUDE}/XPLM" "${XPSDK_INCLUDE}/Widgets" "${XPSDK_INCLUDE}/Wrappers")

TARGET_COMPILE_DEFINITIONS(xprc PUBLIC -DXPLM200=1 -DXPLM210=1 -DXPLM300=1 -DXPLM301=1 -DXPLM302=1 -DXPLM303=1 -DHAVE_XPLM)
TARGET_INCLUDE_DIRECTORIES(xprc PUBLIC "${XPSDK_INCLUDE}/XPLM" "${XPSDK_INCLUDE}/Widgets" "${XPSDK_INCLUDE}/Wrappers" "${LIB_BUILD}")
TARGET_LINK_LIBRARIES(xprc PUBLIC ${IMGWINDOW_LIB} ${CIMGUI_LIB} ${XPLM_LIBRARY} ${XPWIDGETS_LIBRARY} ${LINK_C11_COMPAT_STATIC} ${OPENGL_STATIC_LIBRARIES} m ${OPENGL_LIBRARIES})

IF(UNIX)
    TARGET_LINK_LIBRARIES(xprc PUBLIC c)
ELSEIF(WIN32)
    SET(OS_LIBRARIES bcrypt iphlpapi ws2_32)
    TARGET_LINK_LIBRARIES(xprc PUBLIC ${OS_LIBRARIES})
    TARGET_LINK_OPTIONS(xprc PRIVATE -static-libstdc++ -static-libgcc) # TODO: this relicenses the binary to GPL, replace by more liberal libraries
ENDIF()

TARGET_LINK_OPTIONS(xprc PRIVATE -Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/export_symbols.map)

IF("${XPLANE_TARGET}" EQUAL "12.04")
    TARGET_COMPILE_DEFINITIONS(xprc PUBLIC -DXPLM400=1)
ENDIF()

SET_TARGET_PROPERTIES(xprc PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(xprc PROPERTIES OUTPUT_NAME "xprc")
SET_TARGET_PROPERTIES(xprc PROPERTIES SUFFIX ".xpl")


# tests
IF(BUILD_TESTS)
    ADD_EXECUTABLE(manualtest-fileio ${CMAKE_CURRENT_SOURCE_DIR}/src/manualtest-fileio.c ${COMMON_SOURCES})
    TARGET_INCLUDE_DIRECTORIES(manualtest-fileio PUBLIC "${LIB_BUILD}")
    TARGET_LINK_LIBRARIES(manualtest-fileio PUBLIC ${LINK_C11_COMPAT_STATIC} ${OS_LIBRARIES})
    
    ADD_EXECUTABLE(manualtest-network ${CMAKE_CURRENT_SOURCE_DIR}/src/manualtest-network.c ${COMMON_SOURCES})
    TARGET_INCLUDE_DIRECTORIES(manualtest-network PUBLIC "${LIB_BUILD}")
    TARGET_LINK_LIBRARIES(manualtest-network PUBLIC ${LINK_C11_COMPAT_STATIC} ${OS_LIBRARIES})
    
    ADD_EXECUTABLE(manualtest-network-interfaces ${CMAKE_CURRENT_SOURCE_DIR}/src/manualtest-network-interfaces.c ${COMMON_SOURCES})
    TARGET_INCLUDE_DIRECTORIES(manualtest-network-interfaces PUBLIC "${LIB_BUILD}")
    TARGET_LINK_LIBRARIES(manualtest-network-interfaces PUBLIC ${LINK_C11_COMPAT_STATIC} ${OS_LIBRARIES})
    
    ADD_EXECUTABLE(manualtest-parser ${CMAKE_CURRENT_SOURCE_DIR}/src/manualtest-parser.c ${COMMON_SOURCES})
    TARGET_INCLUDE_DIRECTORIES(manualtest-parser PUBLIC "${LIB_BUILD}")
    TARGET_LINK_LIBRARIES(manualtest-parser PUBLIC ${LINK_C11_COMPAT_STATIC} ${OS_LIBRARIES})
    
    ADD_EXECUTABLE(manualtest-password-generator ${CMAKE_CURRENT_SOURCE_DIR}/src/manualtest-password-generator.c ${COMMON_SOURCES})
    TARGET_INCLUDE_DIRECTORIES(manualtest-password-generator PUBLIC "${LIB_BUILD}")
    TARGET_LINK_LIBRARIES(manualtest-password-generator PUBLIC ${LINK_C11_COMPAT_STATIC} ${OS_LIBRARIES})

    ADD_EXECUTABLE(test-hashmap ${CMAKE_CURRENT_SOURCE_DIR}/src/test-hashmap.c ${COMMON_SOURCES})
    TARGET_INCLUDE_DIRECTORIES(test-hashmap PUBLIC "${LIB_BUILD}")
    TARGET_LINK_LIBRARIES(test-hashmap PUBLIC ${LINK_C11_COMPAT_STATIC} m ${OS_LIBRARIES})

    ADD_EXECUTABLE(test-prealloc-list ${CMAKE_CURRENT_SOURCE_DIR}/src/test-prealloc-list.c ${COMMON_SOURCES})
    TARGET_INCLUDE_DIRECTORIES(test-prealloc-list PUBLIC "${LIB_BUILD}")
    TARGET_LINK_LIBRARIES(test-prealloc-list PUBLIC ${LINK_C11_COMPAT_STATIC} ${OS_LIBRARIES})

    ADD_EXECUTABLE(test-list ${CMAKE_CURRENT_SOURCE_DIR}/src/test-list.c ${COMMON_SOURCES})
    TARGET_INCLUDE_DIRECTORIES(test-list PUBLIC "${LIB_BUILD}")
    TARGET_LINK_LIBRARIES(test-list PUBLIC ${LINK_C11_COMPAT_STATIC} ${OS_LIBRARIES})

    ADD_EXECUTABLE(test-network-addresses ${CMAKE_CURRENT_SOURCE_DIR}/src/test-network-addresses.c ${COMMON_SOURCES})
    TARGET_INCLUDE_DIRECTORIES(test-network-addresses PUBLIC "${LIB_BUILD}")
    TARGET_LINK_LIBRARIES(test-network-addresses PUBLIC ${LINK_C11_COMPAT_STATIC} ${OS_LIBRARIES})
ENDIF()
