CMAKE_MINIMUM_REQUIRED(VERSION 3.22.1)
PROJECT(xprc)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
#SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(BUILD_TESTS TRUE)

SET(COMMON_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/requests.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/channels.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/network.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/hashmap.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lists.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/utils.c
)

SET(XPRC_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/commands.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/command_drqv.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/plugin.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/server.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/session.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/task_schedule.c
    ${COMMON_SOURCES}
)

SET(XPSDK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/lib/XPSDK")
SET(XPSDK_INCLUDE "${XPSDK_ROOT}/CHeaders" CACHE STRING PATH)

ADD_LIBRARY(xprc SHARED ${XPRC_SOURCES})

ADD_DEFINITIONS(-DTARGET_LINUX)
TARGET_COMPILE_DEFINITIONS(xprc PUBLIC -DAPL=0 -DIBM=0 -DLIN=1)
ADD_LIBRARY(xplm INTERFACE)
ADD_LIBRARY(xpwidgets INTERFACE)
SET_PROPERTY(TARGET xprc APPEND_STRING PROPERTY LINK_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -rdynamic -nodefaultlibs -undefined_warning -fPIC -fvisibility=hidden")

SET_PROPERTY(TARGET xplm APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${XPSDK_INCLUDE}/XPLM" "${XPSDK_INCLUDE}/Wrappers")
SET_PROPERTY(TARGET xpwidgets APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${XPSDK_INCLUDE}/XPLM" "${XPSDK_INCLUDE}/Widgets" "${XPSDK_INCLUDE}/Wrappers")

TARGET_COMPILE_DEFINITIONS(xprc PUBLIC -DXPLM200=1 -DXPLM210=1 -DXPLM300=1 -DXPLM301=1 -DXPLM303=1)
TARGET_INCLUDE_DIRECTORIES(xprc PUBLIC "${XPSDK_INCLUDE}/XPLM" "${XPSDK_INCLUDE}/Widgets" "${XPSDK_INCLUDE}/Wrappers")
TARGET_LINK_LIBRARIES(xprc PUBLIC m)

SET_TARGET_PROPERTIES(xprc PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(xprc PROPERTIES OUTPUT_NAME "xprc")
SET_TARGET_PROPERTIES(xprc PROPERTIES SUFFIX ".xpl")


# tests
IF(BUILD_TESTS)
    ADD_EXECUTABLE(manualtest-parser ${CMAKE_CURRENT_SOURCE_DIR}/src/manualtest-parser.c ${COMMON_SOURCES})

    ADD_EXECUTABLE(manualtest-network ${CMAKE_CURRENT_SOURCE_DIR}/src/manualtest-network.c ${COMMON_SOURCES})

    ADD_EXECUTABLE(test-hashmap ${CMAKE_CURRENT_SOURCE_DIR}/src/test-hashmap.c ${COMMON_SOURCES})
    TARGET_LINK_LIBRARIES(test-hashmap PUBLIC m)

    ADD_EXECUTABLE(test-prealloc-list ${CMAKE_CURRENT_SOURCE_DIR}/src/test-prealloc-list.c ${COMMON_SOURCES})
ENDIF()
